<resources>
    <string name="app_name">Examen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Lista Productos</string>
    <string name="menu_gallery">Carga Producto </string>
    <string name="menu_slideshow">Salir</string>
    <!--  Product string  -->
    <string name="item_code">Codigo</string>
    <string name="item_description">Descripcion</string>
    <string name="item_price">Precio</string>
    <string name="item_stock">Stock</string>
    <!-- Carga Productos-->
    <string name="titleCarga">Carga Producto</string>
</resources>