<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/titleCarga"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/titleCarga"
        android:textAlignment="center"
        android:textColor="#A60303"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleCodigo"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/item_code"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCarga" />

    <EditText
        android:id="@+id/inputCodigo"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Ingrese Codigo Producto"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCodigo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/item_description"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCodigo" />

    <EditText
        android:id="@+id/inputDescripcion"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Ingrese Descripcion del producto"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/titletextView4"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/item_price"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDescripcion" />

    <EditText
        android:id="@+id/inputPrecio"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Ingrese Precio Producto"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titletextView4" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:text="Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGuarda"
        app:layout_constraintTop_toBottomOf="@+id/inputStock"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="150dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputStock"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/item_stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPrecio" />

    <EditText
        android:id="@+id/inputStock"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Ingrese cantidad productos"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>